ray-apps/PageFetcher/ContentServer/ray_head_service_aws.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
  name: resourceless-ray-cluster-ray-head
  namespace: "default"
spec:
  ports:
  - port: 8265
    targetPort: 8265
    protocol: TCP
  type: NodePort
