ray-apps/PageFetcher/ContentServer/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
  name: content-server-service
spec:
  type: NodePort
  selector:
    app: contentServer
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80
