ray-apps/PageFetcher/ContentServer/service_aws.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
    # alb.ingress.kubernetes.io/target-type: ip
  name: content-server-service
  # namespace: "default"
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  # type: NodePort
  selector:
    app: contentServer
