ray-apps/PageFetcher/ContentServer/full-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "full-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: full-ingress
spec:
  rules:
  - http:
      paths:
      - path: /ray
        backend:
          serviceName: resourceless-ray-cluster-ray-head
          servicePort: 8265
      - path: /
        backend:
          serviceName: content-server-service
          servicePort: 80
